orquestador/pro/deployment-pro.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-test
  namespace: portales
  labels:
    app: apache-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-test
  template:
    metadata:
      labels:
        app: apache-test
    spec:
      containers:
      - name: apache-test
        image: public.ecr.aws/h1y1q1x5/drupal-php:1.3.4
        resources:
          requests:
            memory: "0"
            cpu: "0"
          limits:
            memory: "0"
            cpu: "0"        
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/var/www/html/web/sites/default/services.yml"
          subPath: services
          name: services
        - mountPath: "/var/www/html/web/sites/default/settings.local.php"
          subPath: settings.local
          name: services
        imagePullPolicy: Always
      volumes:
        - name: services
          configMap:
            name: php-services
